# dota2-api

./: .gitignore  README.md  dota2-api.cabal  stack.yaml
src/: Dota2.hs
src/Dota2/: API.hs  Types.hs
